# camel-gemini-openclaw-orchestrator

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md  README.md  REQUIREMENTS.md  pyproject.toml
configs/: pipeline_config.json  skills_registry.json
runs/006190a73b/: report.md  results.jsonl
runs/32f76673d5/: report.md  results.jsonl
runs/e413dd27d2/: report.md  results.jsonl
runs/fef9b8acfe/: report.md  results.jsonl
src/: __init__.py  codex_cli_bridge.py  coop_pipeline.py  gpt_cli_bridge.py  main.py  openclaw_bridge.py  orchestrator.py  planner.py
src/coop/: __init__.py  components.py  config.py  executor.py  models.py  reporter.py  retry_controller.py  reviewer.py  role_assigner.py  router_gpt_mini.py
tests/: test_codex_cli_bridge.py  test_config.py  test_gpt_cli_bridge.py  test_openclaw_bridge.py
